@@ -508,6 +508,11 @@ New features
   can be used to prevent commits from ever getting deleted from the index.
   (Shai Erera)
   
+* LUCENE-2295: Added a LimitTokenCountAnalyzer / LimitTokenCountFilter
+  to wrap any other Analyzer and provide the same functionality as
+  MaxFieldLength provided on IndexWriter.  This patch also fixes a bug
+  in the offset calculation in CharTokenizer. (Uwe Schindler, Shai Erera)
+  
 Optimizations
 
 * LUCENE-2075: Terms dict cache is now shared across threads instead
